# Agentica

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  dev.sh  docker-compose.yml  env.example
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml
backend/: Dockerfile  config.py  main.py  metrics.py  pyproject.toml  rate_limiter.py  session_manager.py
backend/agents/: __init__.py  decomposition_graph.py  hypothesis_graph.py  prompts.py  react_graph.py  tools.py  utils.py
backend/api/: __init__.py  routes.py  websocket.py
backend/events/: __init__.py  bus.py  types.py
backend/models/: __init__.py  database.py  schemas.py
backend/sandbox/: __init__.py  docker_sandbox.py  security.py
backend/tests/: __init__.py  conftest.py  test_decomposition_graph.py  test_event_bus.py  test_file_integrity.py  test_hypothesis_graph.py  test_react_graph.py  test_routes.py  test_schemas.py  test_security.py  test_session_manager.py  test_tools.py  test_utils.py
frontend/: next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
frontend/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/components/: ErrorBoundary.tsx
frontend/e2e/: fixtures.ts  panels.spec.ts  session-flow.spec.ts  smoke.spec.ts
frontend/hooks/: index.ts  useAgentGraph.ts  useCodePanel.ts  useMessages.ts  usePrompt.ts  useSession.ts
frontend/lib/: api.ts  constants.ts  store.ts  types.ts  (+2 more)
sandbox-image/: Dockerfile
(+49 files in other folders)
